--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -16,6 +16,7 @@
     "DD": "駆逐艦 (DD)",
     "CL": "軽巡洋艦 (CL)",
     "CVLike": "空母 (CV/CVL/AV/CVB)",
+    "CVL": "軽空母 (CVL)",
     "SSLike": "潜水艦 (SS/SSV)",
     "CA": "重巡洋艦 (CA)",
     "BBV": "航空戦艦 (BBV)",
