--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -16,6 +16,7 @@
     "DD": "驱逐舰 (DD)",
     "CL": "轻巡洋舰 (CL)",
     "CVLike": "空母系 (CV/CVL/AV/CVB)",
+    "CVL": "轻空母 (CVL)",
     "SSLike": "潜艇系 (SS/SSV)",
     "CA": "重巡洋舰 (CA)",
     "BBV": "航空战舰 (BBV)",
