--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -16,6 +16,7 @@
     "DD": "驅逐艦 (DD)",
     "CL": "輕巡洋艦 (CL)",
     "CVLike": "空母系 (CV/CVL/AV/CVB)",
+    "CVL": "輕空母 (CVL)",
     "SSLike": "潛艇系 (SS/SSV)",
     "CA": "重巡洋艦 (CA)",
     "BBV": "航空戰艦 (BBV)",
