--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -48,6 +48,8 @@
     "DrumCarrierCount": "\"ドラム缶(輸送用)\" 装備艦の数 ≥%s",
     "DrumCount": "\"ドラム缶(輸送用)\" の数 ≥%s",
     "LevelSum": "艦隊合計レベル %s",
+    "GSRate": "大成功の確率: %s%",
+    "GSHigherLevel": "大成功するため、高いレベルの艦娘が旗艦として設定することが可能です",
     "SparkledCount": "大成功するため、キラキラ艦の数 ≥%s",
     "SparkledCountCustom": "大成功するため、キラキラ艦の数 ≥%s",
     "Morale": "各艦の疲労度 ≥%s",
@@ -68,6 +70,7 @@
     "TTLowMorale": "疲労状態:",
     "TTResupply": "未補給:",
     "TTNotSparkled": "未キラ付け:",
+    "TTHigherLevel": "旗艦より高いレベルの艦娘:",
     "TTShipCanCarryMoreDlc": "%s は %s もっと多くの大発動艇を搭載することが可能です",
     "TTTotalAsw": "現在: %s, 必要: %s",
     "TTTotalAntiAir": "現在: %s, 必要: %s",
