--- a/assets/i18n/zh-CN.json
+++ b/assets/i18n/zh-CN.json
@@ -48,6 +48,8 @@
     "DrumCarrierCount": "需要携带了“ドラム缶(輸送用)”的舰娘%s名",
     "DrumCount": "舰队携带的“ドラム缶(輸送用)”总量至少为%s",
     "LevelSum": "舰娘等级合计至少为%s",
+    "GSRate": "当前大成功概率: %s%",
+    "GSHigherLevel": "将舰队中等级较高的舰娘设为旗舰以提高大成功率",
     "SparkledCount": "携带至少%s名处于“战意高昂”状态的舰娘可极大提高大成功概率",
     "SparkledCountCustom": "推荐携带至少%s名处于“战意高昂”状态的舰娘以提高大成功概率",
     "Morale": "舰娘疲劳度至少为%s",
@@ -67,6 +69,7 @@
     "TTNeedsMoreSparkledShips": "还需%s名处于“战意高昂”状态的舰娘",
     "TTLowMorale": "低士气:",
     "TTResupply": "未补给:",
+    "TTHigherLevel": "旗舰可更换为:",
     "TTNotSparkled": "未处于“战意高昂”状态:",
     "TTShipCanCarryMoreDlc": "%s 还可携带最多%s枚大发系装备",
     "TTTotalAsw": "当前值: %s, 需要: %s",
