--- a/assets/i18n/ko-KR.json
+++ b/assets/i18n/ko-KR.json
@@ -48,6 +48,8 @@
     "DrumCarrierCount": "≥%s ship(s) should carry \"ドラム缶(輸送用)\"",
     "DrumCount": "Fleet carries ≥%s \"ドラム缶(輸送用)\" in total",
     "LevelSum": "Total level of this fleet should be at least %s",
+    "GSRate": "Great success rate: %s%",
+    "GSHigherLevel": "Flagship needs high level for a great success rate boost",
     "SparkledCount": "≥%s sparkled ship(s) for a great success rate boost",
     "SparkledCountCustom": "≥%s sparkled ship(s) for a better great success rate",
     "Morale": "All ships in this fleet should have morale ≥%s",
@@ -67,6 +69,7 @@
     "TTNeedsMoreSparkledShips": "Needs %s more sparkled ship(s)",
     "TTLowMorale": "Low morale:",
     "TTResupply": "Not resupplied:",
+    "TTHigherLevel": "Flagship recommend:",
     "TTNotSparkled": "Not Sparkled:",
     "TTShipCanCarryMoreDlc": "%s can carry %s more Daihatsu-class equipment(s)",
     "TTTotalAsw": "Current: %s, Needed: %s",
