--- a/assets/i18n/zh-TW.json
+++ b/assets/i18n/zh-TW.json
@@ -48,6 +48,8 @@
     "DrumCarrierCount": "需要攜帶了“ドラム缶(輸送用)”的艦娘%s名",
     "DrumCount": "艦隊攜帶的“ドラム缶(輸送用)”總量至少爲%s",
     "LevelSum": "艦娘等級合計至少爲%s",
+    "GSRate": "當前大成功概率: %s%",
+    "GSHigherLevel": "將艦隊中等級較高的艦娘設為旗艦以提高大成功率",
     "SparkledCount": "攜帶至少%s名處於“戰意高昂”狀態的艦娘可極大提高大成功概率",
     "SparkledCountCustom": "推薦攜帶至少%s名處於“戰意高昂”狀態的艦娘以提高大成功概率",
     "Morale": "艦娘疲勞度至少爲%s",
@@ -67,6 +69,7 @@
     "TTNeedsMoreSparkledShips": "還需%s名處於“戰意高昂”狀態的艦娘",
     "TTLowMorale": "低士氣:",
     "TTResupply": "未補給:",
+    "TTHigherLevel": "旗艦可更換為:",
     "TTNotSparkled": "未處於“戰意高昂”狀態:",
     "TTShipCanCarryMoreDlc": "%s 還可攜帶最多%s枚大發系裝備",
     "TTTotalAsw": "當前值: %s, 需要: %s",
