fix: use more suitable words in Japanese

--- a/assets/i18n/ja-JP.json
+++ b/assets/i18n/ja-JP.json
@@ -1,11 +1,11 @@
 {
   "EZ Exped": "イージー遠征",
   "GSRateCustom": "大成功の確率",
-  "GSRateCustomDesc": "大成功準備完了ために必要な大成功の確率を設定する",
+  "GSRateCustomDesc": "大成功の準備完了の判定のために必要な大成功の確率を設定する",
   "HideMainFleet": "第一艦隊を隠す",
-  "HideSatReqs": "満足した条件を隠す",
-  "SyncMainFleetId": "アクティブ艦隊は艦隊パネルに従う",
-  "FleetAutoSwitch": "ゲーム内のアクションによってバネルを切り換える",
+  "HideSatReqs": "満たされた条件を隠す",
+  "SyncMainFleetId": "アクティブな艦隊は艦隊パネルに従う",
+  "FleetAutoSwitch": "ゲーム内の操作によってバネルを切り換える",
   "FleetAutoSwitchDesc": "アクティブ艦隊はゲーム内のアクションに従う",
   "Great Success": "大成功",
   "CondNormal": "普通",
@@ -49,7 +49,7 @@
     "DrumCount": "\"ドラム缶(輸送用)\" の数 ≥%s",
     "LevelSum": "艦隊合計レベル %s",
     "GSRate": "大成功の確率: %s%",
-    "GSHigherLevel": "大成功するため、高いレベルの艦娘が旗艦として設定することが可能です",
+    "GSHigherLevel": "より高いレベルの艦娘を旗艦にすることで大成功の確率を上昇させることが可能です",
     "Morale": "各艦の疲労度 ≥%s",
     "Resupply": "各艦とも補給済み",
     "AllSparkled": "各艦ともキラキラ",
@@ -58,18 +58,18 @@
     "TotalAntiAir": "総対空値 ≥%s",
     "TotalLos": "総索敵値 ≥%s",
     "TotalFirepower": "総火力値 ≥%s",
-    "MissingInfo": "不明情報",
-    "TTNoFlagship": "旗艦がありません",
-    "TTNeedsMoreShips": "まだ艦娘 %s 隻が必要です",
-    "TTNeedsMoreDrumCarriers": "まだ\"ドラム缶(輸送用)\" 装備艦 %s 隻が必要です",
-    "TTNeedsMoreDrums": "まだ\"ドラム缶(輸送用)\" %s つが必要です",
+    "MissingInfo": "情報が不明です",
+    "TTNoFlagship": "旗艦が居ません",
+    "TTNeedsMoreShips": "まだ艦娘が %s 隻が必要です",
+    "TTNeedsMoreDrumCarriers": "まだ \"ドラム缶(輸送用)\" を %s 隻に装備する必要があります",
+    "TTNeedsMoreDrums": "まだ \"ドラム缶(輸送用)\" が %s つ必要です",
     "TTCurrentTotalLevel": "現在の艦隊合計レベル: %s",
     "TTNeedsMoreSparkledShips": "まだキラキラ艦 %s 隻が必要です",
     "TTLowMorale": "疲労状態:",
     "TTResupply": "未補給:",
     "TTNotSparkled": "未キラ付け:",
     "TTHigherLevel": "旗艦より高いレベルの艦娘:",
-    "TTShipCanCarryMoreDlc": "%s は %s もっと多くの大発動艇を搭載することが可能です",
+    "TTShipCanCarryMoreDlc": "%s はもう %s つの大発動艇を搭載することが可能です",
     "TTTotalAsw": "現在: %s, 必要: %s",
     "TTTotalAntiAir": "現在: %s, 必要: %s",
     "TTTotalLos": "現在: %s, 必要: %s",
@@ -77,16 +77,16 @@
     "TTMissingInfo": "この遠征の条件は、現時点では不明です"
   },
   "FleetState": {
-    "MainShouldHide": "非表示になります",
+    "MainShouldHide": "非表示(アクティブな艦隊の切替時に有効になります)",
     "NotAvail": "利用不可",
     "OnExped": "遠征中 #%s",
     "Ready": "遠征 #%s 準備完了",
-    "NeedResupply": "遠征 #%s の補給が必要",
-    "Unmet": "遠征 #%s の条件を満足しない"
+    "NeedResupply": "遠征 #%s には補給が必要",
+    "Unmet": "遠征 #%s の条件を満たさない"
   },
   "Kancepts": {
     "Launch": "kancepts を起動",
-    "ExportShipList": "艦隊リストをエキスパート"
+    "ExportShipList": "艦隊リストをエクスポート"
   },
   "Expedition made easy": "遠征報酬早見表",
   "Fleet Composition": "艦隊編成"
